shell: Fix dashboard button alignment for Patternfly Icons
These have been out of alignment since the upgrade to the new
Patternfly version.

Closes #2174

--- a/pkg/shell/shell.css
+++ b/pkg/shell/shell.css
@@ -25,11 +25,6 @@ html, body {
     height: 100%;
 }
 
-/* Grow the delete icon a bit in order to make it render better */
-.btn-delete.pficon-delete {
-    font-size: 14px;
-}
-
 #dashboard-add {
     height: 28px;
     width: 28px;
@@ -63,6 +58,11 @@ html, body {
     padding: 8px;
     float: right;
     margin-left: 10px;
+}
+
+#dashboard-hosts button.btn.pficon {
+    padding-top: 5px;
+    font-size: 14px;
 }
 
 /* Per server buttons not visible by default */
